<?xml version="1.0" encoding="utf-8"?>
<resources>
    

    <string name="app_name">减减</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world1">减 减</string>
    <string name="hello_world2">减减</string>
    <string name="hello_world3">Thiner than yesterday</string>
    <string name="login_1">欢迎登录减减</string>
    <string name="login_2">登录</string>
    <string name="login_3">用户名</string>
    <string name="login_4">密码</string>
    <string name="login_5">请输入用户名</string>
    <string name="login_6">密码</string>
    <string name="login_7">注册</string>
    
    <string name="register_1">注册</string>
    <string name="register_2">用户名</string>
    <string name="register_3">密码</string>
    <string name="register_4">请输入密码</string>
    <string name="register_5">请确认密码</string>
    <string name="register_6">取消</string>
    <string name="register_7">注册成功</string>
    <string name="register_8">即将跳转至登录界面</string>
    
    <string name="main_1">+</string>
    <string name="main_2">-</string>
    <string name="main_3">=</string>
    <string name="outPop">重量(克)或运动时间（分）</string>
    
    <string name="food_1">胡萝卜</string>
    <string name="food_2">鸡蛋</string>
    <string name="food_3">牛肉</string>
    <string name="food_4">猪肉</string>
    <string name="food_5">猪排骨</string>
    <string name="food_6">羊肉</string>
    <string name="food_7">火腿肠</string>
    <string name="food_8">草鱼</string>
    <string name="food_9">苹果</string>
    <string name="food_10">梨</string>
    <string name="food_11">香蕉</string>
    <string name="food_12">桃</string>
    <string name="food_13">瓜子（炒）</string>
    <string name="food_14">花生</string>
    <string name="food_15">牛奶</string>
    <string name="food_16">羊奶</string>
    <string name="food_17">豆浆</string>
    <string name="food_18">莴笋</string>
    <string name="food_19">南瓜</string>
    <string name="food_20">西红柿</string>
    <string name="food_21">土豆</string>
    <string name="food_22">米饭</string>
    <string name="food_23">面包</string>
    <string name="food_24">香油</string>
    
    <string name="sport_1">跑步</string>
    <string name="sport_2">篮球</string>
    <string name="sport_3">足球</string>
    <string name="sport_4">羽毛球</string>
    <string name="sport_5">网球</string>
    <string name="sport_6">乒乓球</string>
    <string name="mins">—   —</string>

</resources>
