<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="match_parent"    
    android:layout_height="match_parent"    
    android:orientation="vertical" 
    android:background="@color/white">     
    
    <ListView        
        android:id="@+id/msg_list"        
        android:layout_width="match_parent"        
        android:layout_height="0dp"        
        android:layout_weight="1" >    
    </ListView>

    <LinearLayout        
        android:layout_width="match_parent"        
        android:layout_height="wrap_content">                                          
     	<Button			
        	android:id="@+id/add"			
        	android:layout_width="wrap_content"			
        	android:layout_height="wrap_content"	
        	android:layout_weight="1"				
        	android:text="@string/main_1" 
        	android:background="@drawable/button_1"/>
	    <Button			
	        android:id="@+id/min"			
	        android:layout_width="wrap_content"			
	        android:layout_height="wrap_content"	
	        android:layout_weight="1"		
	        android:text="@string/main_2" 
	        android:background="@drawable/button_1"/> 
		<Button			
	        android:id="@+id/equal"			
	        android:layout_width="wrap_content"			
	        android:layout_height="wrap_content"
	        android:layout_weight="1"					
	        android:text="@string/main_3" 
	        android:background="@drawable/button_1"/>            
     </LinearLayout>
                    
</LinearLayout>
